Exercise3 [Marat] test: rewrite MovieAPITest with improved structure and full exception coverage
- Rewrote MovieAPITest class preserving the original structure
- Added full comments explaining each test
- Improved test names for clarity and consistency
- Explicitly test handling of HTTP error codes with MovieApiException
- Verified correct filtering behavior in successful responses